# swagger.yaml
@@ -5,12 +5,12 @@ info:
     email: apiteam@swagger.io
   version: 1.0.0
 servers:
-  - url: https://localhost:3000/api/v1
+  - url: http://localhost:3000/api/v1
 tags:
   - name: zombies
     description: Everything about your Zombies
 paths:
-  /zombies:
+  /zombie:
     get:
       tags:
         - zombies
@@ -26,7 +26,49 @@ paths:
                 items:
                   $ref: '#/components/schemas/Zombie'
     
-  /zombie/{id}:
+    post:
+      tags:
+        - zombies
+      summary: Post zombie
+      operationId: postZombie
+      requestBody:
+        description: Zombie object that needs to be added to the store
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Zombie'
+        required: true
+      responses:
+        200:
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: object
+                $ref: '#/components/schemas/ApiResponse'
+    
+    put:
+        tags:
+          - zombies
+        summary: Put zombie
+        operationId: postZombie
+        requestBody:
+          description: Zombie object that needs to be added to the store
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Zombie'
+          required: true
+        responses:
+          200:
+            description: successful operation
+            content:
+              application/json:
+                schema:
+                  type: object
+                  $ref: '#/components/schemas/ApiResponse'
+    
+  /zombie/{zombieId}:
       get:
         tags:
           - zombies
@@ -38,8 +80,7 @@ paths:
             description: ID of zombie to return
             required: true
             schema:
-              type: integer
-              format: int64
+              type: string
         responses:
           200:
             description: successful operation
@@ -49,50 +90,6 @@ paths:
                   type: object
                   $ref: '#/components/schemas/Zombie'
       
-      post:
-        tags:
-          - zombies
-        summary: Post zombie
-        operationId: postZombie
-        parameters:
-          - name: zombieId
-            in: path
-            description: ID of zombie to return
-            required: true
-            schema:
-              type: integer
-              format: int64
-        responses:
-          200:
-            description: successful operation
-            content:
-              application/json:
-                schema:
-                  type: object
-                  $ref: '#/components/schemas/ApiResponse'
-
-      put:
-        tags:
-          - zombies
-        summary: Put zombie
-        operationId: postZombie
-        parameters:
-          - name: zombieId
-            in: path
-            description: ID of zombie to return
-            required: true
-            schema:
-              type: integer
-              format: int64
-        responses:
-          200:
-            description: successful operation
-            content:
-              application/json:
-                schema:
-                  type: object
-                  $ref: '#/components/schemas/ApiResponse'
-
       delete:
         tags:
           - zombies
@@ -104,8 +101,14 @@ paths:
             description: ID of zombie to return
             required: true
             schema:
-              type: integer
-              format: int64
+              type: string
+        requestBody:
+          description: Zombie object that needs to be added to the store
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Zombie'
+          required: true
         responses:
           200:
             description: successful operation
